--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "format:ci": "prettier --list-different \"src/**/*.{ts,tsx}\"",
     "prepublishOnly": "tsc",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "benchmark": "jest --testPathPattern='.*benchmark.*'",
     "test-coverage": "jest --coverage",
     "eslint": "eslint --ext \".ts,.tsx\" src",
