--- a/package.json
+++ b/package.json
@@ -98,6 +98,9 @@
           "includeConsoleLog": true
         }
       ]
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.ts"
     ]
   },
   "husky": {
